<resources>
    <string name="app_name">Moodle Leader Test</string>
    <string name="app_version">1.0.0</string>

    <string name="title_main">Главная страница</string>
    <string name="title_about_test">Про тест</string>
    <string name="title_descriptor">Дескрипторы</string>
    <string name="title_about_app">Про приложение</string>
    <string name="title_person_type">Типы личностей</string>
    <string name="title_preword">Инструкции</string>
    <string name="title_result">Результаты</string>
    <string name="title_test">Тест</string>

    <string name="detail_e">Экстровертность</string>
    <string name="detail_i">Интровертность</string>
    <string name="detail_s">Сенсорика</string>
    <string name="detail_n">Интуиция</string>
    <string name="detail_t">Логика</string>
    <string name="detail_f">Этика</string>
    <string name="detail_j">Рациональность</string>
    <string name="detail_p">Иррациональность</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_short_test">Быстрый тест</string>
    <string name="nav_long_test">Полный тест</string>
    <string name="nav_results">Просмотреть результаты</string>
    <string name="nav_about_test">Про тест</string>
    <string name="nav_descriptors">Дескрипторы</string>
    <string name="nav_person_types">Типы личностей</string>
    <string name="nav_about_app">Про приложение</string>
    <string name="nav_about_dev">Создатели</string>
    <string name="nav_item_test">Данные теста</string>
    <string name="nav_item_app">Приложение</string>

    <string name="about_app_version">Версия: 1.0.0</string>
    <string name="about_app_devs">
        Разработчики:\n\n
        Программирование - <b>Данил Чабановский</b>\n
        Дизайн - <b>Максим Сорока</b>\n
        Тестирование и создание базы данных - <b>Коринна Коваленко</b>\n
        \n
        По всем вопросам писать на почту a2881dante.dev@gmail.com
    </string>

    <string name="test_next">Далее</string>

    <string name="about_test_title">Тест на тип личности по Майерс-Бриггс (MBTI)</string>
    <string name="about_test_text">
        Предыстория появления типологии восходит к работам Карла Юнга, который в опубликованной в
        1921 г. книге «Психологические типы» предположил, что основных психологических функций,
        помогающих человеку воспринимать мир, четыре. Это – мышление, чувства, интуиция и ощущения.
        Этот труд был гораздо фундаментальнее, чем представления американки Кэтрин Бриггс, которая
        просто интересовалась различиями в характерах разных людей. Но, познакомившись с типологией
        Юнга, она, поддерживаемая своей дочерью Изабель Бриггс-Майерс, начала детально изучать
        данную проблематику и даже опубликовала пару научных статей. Типов она выделяла также
        четыре, и основывалась, по собственному же признанию, на работах Юнга. Но позже теорию
        значительно расширила дочь, придав ей очертания современной.\n\n

        Случилось это в годы Второй мировой войны. Именно тогда появился Myers-Briggs Type Indicator
        (MBTI – собственно типология, также часто используется термин «соционика»). Это не была
        «голая» теория – исследовательницы опирались на оригинальные испытания, ими же составленные.
        Цель изысканий была самой благородной: на основе тестирования определить индивидуальные
        личностные предпочтения в работе и подобрать женщинам, которые должны были заменить на
        производстве ушедших в армию мужчин, занятия, где они смогут по достоинству проявить свои
        таланты. Уже позже, в 50-60-е годы, о типологии положительно отзывались видные учёные, были
        проведены новые опыты, позволяющие уточнить методику. Но кроме последователей, MBTI имеет и
        ряд критиков, которые указывают на то, что типология Майерс-Бриггс почти дублирует
        исследования К. Юнга в теоретической части и не всегда обнаруживает свою валидность на практике.
    </string>

    <string name="descriptions_title">Дескрипторы</string>
    <string name="descriptions_text">
        Суть системы психологического тестирования MBTI заключается
        в том, что, благодаря измерению уникальных комбинаций личностных факторов человека, можно
        предугадать его склонность к определённому виду деятельности, стиль его действий, характер
        решений и прочие особенности, позволяющие ему чувствовать себя комфортно и уверенно. Для
        и чего были придуманы, 4 шкалы (дескриптора), по которым исследуется личность:
    </string>

    <string name="persons_title">16 типов личности: интерпретация результатов теста</string>
    <string name="persons_text">
        Вы получили результат, который является одним из 16 типов личности, которые образуются в
        результате пересечения описанных выше 4-х дескрипторов, содержащих по 2 элемента (четыре
        в квадрате – 16). Эти 16 типов присвоено условное нарицательное имя для каждого типа, чтобы
        было проще ориентироваться:
    </string>

    <string name="main_title">Тест на тип личности по Майерс-Бриггс (MBTI)</string>
    <string name="main_text">Перед началом теста, важно понять следующие вещи:
        Никакие вопросы никакого, даже самого подробного, опросника не могут охватить все поведение человека. Данный тест позволяет лишь «очертить рамки» и указывает на уклон, а не на всеобъемлющее доминирование одних свойств над другими.
        Независимо от принадлежности к какому-либо типу, каждый человек использует в повседневной жизни оба полюса предпочтений, но в разной мере. К примеру, мы можем быть общительными с хорошими знакомыми, но чаще являться интровертами.
        При ответе на вопрос выбирайте тот вариант, который кажется наиболее предпочтительным и комфортным для вас в большинстве жизненных ситуаций. Если оба варианта не нравятся, то выбирайте наименее непривлекательный вариант.
        Пройдя тест, вы узнаете не только свой тип личности, но и получите небольшое объяснение результата. Не забудьте ответить на все вопросы, для этого удобнее всего идти по порядку.</string>
    <string name="main_btn_start_short">Запустить быстрый тест</string>
    <string name="main_btn_start_long">Запустить полный тест</string>

    <string name="preword_title">Инструкции к тесту</string>
    <string name="preword_text">
        <b>Прочтите прежде чем начать:</b>
        \n\n1) Так как зачастую невозможнодать односложный ответ, то ответы выставляються по предпочтениям.
        То есть между ответами "Холодный" и "Гарячий" можно дать ответу "Холодный" 70 баллов, а
        остальные 30 ответу "Гарячий", что будет означать "Скорее холодный чем гарячий".
        \n2) Отвечайте не спеша и не обманывая себя - вернуться и исправить ответ вы уже не сможете.
        \n3) Если чувствуйте что Вам близки оба ответа - оставьте значения ответов на отметке 50/50.
    </string>

    <string name="result_page">Просмотреть информацию про свой тип личности</string>
    <string name="result_lead">росмотреть даные про предпочитаемые организационные культуры</string>
    <string name="result_detail">Больше деталей профиля</string>
    <string name="result_save">Сохранить</string>
    <string name="result_user">USER</string>
    <string name="result_user_hint">Ваше имя</string>

    <string name="result_lead_leader">Информация по типу "Лидер"</string>
    <string name="result_lead_employ">Информация по типу "Подчиненый"</string>


    <string name="lead_culture">Организационые культуры</string>
    <string name="lead_c">Клан</string>
    <string name="lead_a">Адхократия</string>
    <string name="lead_b">Бюрократия</string>
    <string name="lead_m">Рынок</string>

    <string name="lead_axes">Оценочные оси</string>
    <string name="lead_1">Гибкость и дискретность</string>
    <string name="lead_2">Стабильность и контроль</string>
    <string name="lead_3">Внутрений фокус и интеграция</string>
    <string name="lead_4">Внешняя направленость и дефференция</string>

    <string name="action_settings">Settings</string>
</resources>
